# WallpaperMagic

./: .gitignore  Cargo.toml  package.json
src/: app.rs  index.css  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app.rs  main.rs
src-tauri/src/models/: mod.rs
src/components/: App.css  App.js
src/components/dropdown/: dropdown.css  dropdown.jsx
src/components/screens/: screen.css  screen.jsx  screensview.css  screensview.jsx
src/utils/: mod.rs  oneinstance.rs
