[package]
name = "wallpapermagic"
version = "0.1.0"
authors = [ "Sergio Ribera" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1", features = ["fltk-bundled"] }
clap = "3.0.0-beta.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "3.0"
strum = "0.21"
strum_macros = "0.21"
