[package]
name = "wallpapermagic"
version = "0.1.0"
authors = [ "Sergio Ribera" ]
edition = "2018"
description = "A Wallpaper Managment App"
license = ""
repository = ""
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.0" }

[dependencies]
clap = "3.0.0-beta.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "3.0"
strum = "0.21"
strum_macros = "0.21"
tauri = { version = "1.0.0-beta.1", features = ["api-all"] }
tokio = { version = "1", features = [ "rt", "rt-multi-thread", "sync" ] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
